<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_note"
            android:iconTint="@color/white"
            android:title="@string/notes"/>
        <item
            android:id="@+id/nav_todo"
            android:icon="@drawable/ic_todo"
            android:title="@string/to_do_list"/>

        <item
            android:id="@+id/nav_password_manager"
            android:icon="@drawable/ic_password_manager"
            android:title="@string/password_manager"/>
    </group>

    <item android:title="@string/categories"
        android:id="@+id/categories_submenu">
        <menu>

        </menu>
    </item>
<item android:title="@string/miscellaneous">
    <menu>
        <item
            android:id="@+id/nav_archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/archive"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favorite"/>
        <item
            android:id="@+id/nav_gift"
            android:icon="@drawable/baseline_card_giftcard_24"
            android:title="@string/a_message"/>
    </menu>
</item>


</menu>