<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_addCredentialContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/_10sdp"
    android:background="@drawable/bg_dialog">

    <ImageView
        android:id="@+id/imageAddCredential"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/baseline_category_24"
        app:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="Add Credential"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@id/imageAddCredential"
        app:layout_constraintTop_toTopOf="@id/imageAddCredential"
        app:layout_constraintStart_toEndOf="@id/imageAddCredential"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/img_pick_app_icon"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:scaleType="fitXY"
        android:src="@drawable/instagram_ic"
        android:layout_marginEnd="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_enterAppName"
        app:layout_constraintBottom_toBottomOf="@id/et_enterAppName"/>

    <EditText
        android:id="@+id/et_enterAppName"
        android:layout_width="0dp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_app_name"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@+id/img_pick_app_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAddCredential" />

    <EditText
        android:id="@+id/et_enterEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_email"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enterAppName" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinner_select_credential_category"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:hint="@string/select_category"
        android:textColorHint="@color/colorTextHint"
        app:boxBackgroundColor="@color/colorSearchBackground"
        app:boxStrokeColor="@color/colorTextHint"
        app:expandedHintEnabled="true"
        app:hintTextColor="@color/colorTextHint"
        app:layout_constraintBottom_toTopOf="@id/et_enterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enterEmail">

        <AutoCompleteTextView
            android:id="@+id/credential_category_auto_complete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/et_enterPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/_8sdp"
        android:textColor="@color/white"
        android:textColorHint="@color/colorTextHint"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_select_credential_category" />

    <TextView
        android:id="@+id/textAddCredential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/add"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enterPassword"/>

    <TextView
        android:id="@+id/textCancelCredential"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toStartOf="@id/textAddCredential"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_enterPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>